# REVOLUT_GATEWAY

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  test-copilot.js  test-models.js  test-ws.js  test_ws.py  tsconfig.json
PLAN/: websocket-llm-web.md
src/: index.ts
src/agent/: agent-runtime.ts  agent_runtime.py
src/protocol/: frames.py  frames.ts  index.ts  validators.ts
src/queue/: command-queue.ts  command_queue.py  index.ts
src/server/: gateway-server.ts  gateway_server.py  index.ts
src/sessions/: session-manager.ts  session_manager.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  useGateway.ts
